--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1133,10 +1133,59 @@ fieldset {
 
 .dashboard .main .FAQ .search-bar {
     margin-top: 30px;
+    display: flex;
+    position: relative;
+    background-color: #292932;
+    width: 50%;
+    border-radius: 15px;
+    padding: 10px;
+    align-items: center;
 }
 
 .dashboard .main .FAQ .search-bar .categories {
+    min-width: 30%;
+}
+
+.dashboard .main .FAQ .search-bar .categories .first-category {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #44444F;
+    border-radius: 7px;
+    font-size: .85rem;
+    justify-content: space-between;
+}
+
+.dashboard .main .FAQ .search-bar .search {
+    background: transparent;
+    margin-left: 20px;
+    border: none;
+    color: #696974;
+    width: 100%;
+}
+
+.dashboard .main .FAQ .search-bar .categories .first-category .arrow {
+    margin-left: 10px;
+    width: 8px;
+}
+
+.dashboard .main .FAQ .search-bar .categories .the-rest-categories {
+    position: absolute;
+    top: 100%;
+    left: 10px;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
+.dashboard .main .FAQ .search-bar .search-icon {
     width: 10%;
+    height: 50%;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: #1E75FF;
 }
 
 .dashboard .main .FAQ .answers-wrap {
@@ -1480,6 +1529,14 @@ fieldset {
     .dashboard .main .lobby .popular-products-slides .popular-product .buttons {
         width: 100%;
     }
+    .dashboard .main .product-info .info .changes .show-all {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .dashboard .main .product-info .info .changes .show-all .show-more {
+        width: 125px;
+    }
 }
 
 @media (max-width: 680px) {
@@ -1509,6 +1566,14 @@ fieldset {
     }
     .dashboard .main .products .product .cover {
         height: 50vw;
+    }
+    .dashboard .main .product-info .info .changes .show-all {
+        flex-direction: column;
+    }
+    .dashboard .main .product-info .info .changes .show-all .how-many-shown {
+        width: 100%;
+        margin: 15px 0 0;
+        text-align: center;
     }
 }
 
