--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -153,19 +153,18 @@ fieldset {
 
 .home .nav .container .social-media {
     display: flex;
-    align-items: center;
     height: 100%;
 }
 
 .home .nav .social-media .social-media-link {
     display: flex;
     align-items: center;
-    height: 100%;
-    padding: 0 15px;
+    justify-content: center;
+    min-height: 100%;
+    padding: 15px;
     border: 1px solid #3a2d33;
     border-radius: 10px;
     transition: 200ms;
-    padding: 15px;
 }
 
 .home .nav .social-media .social-media-link:hover {
@@ -1157,6 +1156,10 @@ fieldset {
     justify-content: space-between;
 }
 
+.dashboard .main .FAQ .search-bar .categories .first-category .category {
+    user-select: none;
+}
+
 .dashboard .main .FAQ .search-bar .search {
     background: transparent;
     margin-left: 20px;
@@ -1177,6 +1180,22 @@ fieldset {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+}
+
+.dashboard .main .FAQ .search-bar .categories .the-rest-categories .category {
+    background-color: #44444F;
+    padding: 15px;
+    cursor: pointer;
+    transition: 200ms;
+}
+
+.dashboard .main .FAQ .search-bar .categories .the-rest-categories .category:hover {
+    background-color: #3b3b47;
+}
+
+.dashboard .main .FAQ .search-bar .categories .the-rest-categories .category:last-of-type {
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 
 .dashboard .main .FAQ .search-bar .search-icon {
@@ -1380,6 +1399,16 @@ fieldset {
     }
 }
 
+@media (max-width: 1020px) {
+    .dashboard .main .FAQ .search-bar {
+        width: 60%;
+        margin: 30px auto 0 auto;
+    }
+    .dashboard .main .FAQ .search-bar .search {
+        margin-left: 10px;
+    }
+}
+
 @media (max-width: 1000px) {
     .home .nav {
         height: 100%;
@@ -1462,6 +1491,9 @@ fieldset {
     .dashboard .main .lobby .video .watch {
         width: 175px;
     }
+    .dashboard .main .FAQ .search-bar .search {
+        height: 20px;
+    }
 }
 
 @media (max-width: 900px) {
@@ -1507,6 +1539,15 @@ fieldset {
     }
     .dashboard .nav .user-menu .avatar .first-char {
         font-size: .85rem;
+    }
+}
+
+@media (max-width: 860px) {
+    .dashboard .main .FAQ .search-bar {
+        width: 90%;
+    }
+    .dashboard .main .FAQ .search-bar .search-icon {
+        width: 8%;
     }
 }
 
@@ -1575,6 +1616,21 @@ fieldset {
         margin: 15px 0 0;
         text-align: center;
     }
+    .dashboard .main .FAQ .search-bar {
+        flex-direction: column;
+        padding: 10px 0 0;
+    }
+    .dashboard .main .FAQ .search-bar .categories {
+        width: 95%;
+        position: relative;
+    }
+    .dashboard .main .FAQ .search-bar .search {
+        width: 95%;
+        height: 50px;
+    }
+    .dashboard .main .FAQ .search-bar .search-icon {
+        display: none;
+    }
 }
 
 @media (max-width: 550px) {
@@ -1622,7 +1678,7 @@ fieldset {
         width: 100%;
         left: 0;
         top: 100%;
-    }   
+    }
 }
 
 @media (max-width: 400px) {
@@ -1684,10 +1740,35 @@ fieldset {
     align-items: center;
 }
 
+.dashboard .footer .contacts .soc-media {
+    margin-left: 30px;
+    display: flex;
+}
+
+.dashboard .footer .contacts .soc-media a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 12px;
+    border: 1px solid #292932;
+    border-radius: 10px;
+    transition: 200ms;
+}
+
+.dashboard .footer .contacts .soc-media a + a {
+    margin-left: 10px;
+}
+
+.dashboard .footer .contacts .soc-media a:hover {
+    filter: invert(1);
+    background-color: #000;
+    border: 1px solid #fff;
+}
+
 .dashboard .footer .gray-line {
     height: 100%;
     width: 1px;
-    /* transform: rotate(90deg); */
+    transform: rotate(90deg);
     background-color: gray;
 }
 
@@ -1699,6 +1780,7 @@ fieldset {
     color: #fff;
     border-radius: 10px;
     transition: 200ms;
+    margin-left: 30px;
 }
 
 .dashboard .footer .download-loader:hover {
@@ -1709,9 +1791,22 @@ fieldset {
     .dashboard .footer .container {
         flex-direction: column;
     }
+    .dashboard .footer .zeer {
+        flex-direction: column;
+    }
+    .dashboard .footer .zeer .time-working {
+        margin-top: 15px;
+    }
     .dashboard .footer .contacts {
         flex-direction: column;
         margin-top: 20px;
+        justify-content: center;
+    }
+    .dashboard .footer .contacts .soc-media {
+        margin: 0;
+    }
+    .dashboard .footer .download-loader {
+        margin: 0;
     }
     .dashboard .nav .links .icon {
         margin: 0;
