FAQ search bar is ideally adapted

--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1513,6 +1513,7 @@ fieldset {
     border-radius: 7px;
     font-size: .85rem;
     justify-content: space-between;
+    user-select: none;
 }
 
 .dashboard .main .FAQ .search-bar .categories .first-category .category {
@@ -1539,6 +1540,7 @@ fieldset {
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    user-select: none;
 }
 
 .dashboard .main .FAQ .search-bar .categories .the-rest-categories .category {
@@ -2037,6 +2039,9 @@ fieldset {
         width: 100%;
         left: 0;
         top: 100%;
+    }
+    .dashboard .main .FAQ .search-bar .categories .the-rest-categories {
+        left: 0;
     }
 }
 
