--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -484,7 +484,7 @@ fieldset {
 
 .dashboard .nav .user-menu .menu-arrow {
     margin-left: 80px;
-    width: calc(1.2vw - .5vh);
+    width: 11px;
     cursor: pointer;
 }
 
@@ -530,7 +530,7 @@ fieldset {
     min-height: 85vh;
     background: #13131A;
     margin-top: 30px;
-    margin-top: calc(3vw - 1vh);
+    margin-top: 30px;
 }
 
 .dashboard .main .lobby a {
@@ -556,7 +556,7 @@ fieldset {
 }
 
 .dashboard .main .lobby .info .user {
-    width: 30vw;
+    width: 100%;
     display: flex;
     flex-direction: column;
     padding: 20px;
@@ -811,7 +811,6 @@ fieldset {
 .dashboard .main .products .product .cover {
     width: 100%;
     height: 300px;
-    height: 25vw;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
