--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -983,7 +983,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-    height: 100%;
+    height: 50%;
 }
 
 .dashboard .main .lobby .subscriptions .subscription {
@@ -1022,7 +1022,7 @@ fieldset {
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions {
-    margin-top: 3vw;
+    margin-top: 30px;
     background-image: url(/images/answers_to_questions.png);
     background-position: right center;
     background-repeat: no-repeat;
