--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -625,7 +625,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 30px;
-    height: 100%;
+    height: 50%;
 }
 
 .dashboard .main .lobby .subscriptions .subscription {
@@ -664,7 +664,7 @@ fieldset {
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions {
-    margin-top: 3vw;
+    margin-top: 30px;
     background-image: url('../images/backgrounds/answers_to_questions.png');
     background-position: right center;
     background-repeat: no-repeat;
