--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -542,6 +542,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    height: 300px;
 }
 
 .dashboard .main .lobby .info {
@@ -562,6 +563,8 @@ fieldset {
     padding: 20px;
     background-color: #1C1C24;
     border-radius: 10px;
+    height: 50%;
+    justify-content: space-around;
 }
 
 .dashboard .main .lobby .info .user .general {
@@ -583,7 +586,7 @@ fieldset {
 }
 
 .dashboard .main .lobby .info .user .general .data {
-    margin-left: 10px;
+    margin-left: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -593,6 +596,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
+    font-size: .7rem;
 }
 
 .dashboard .main .lobby .info .buttons button:first-of-type {
@@ -607,7 +611,6 @@ fieldset {
     border: none;
     border-radius: 10px;
     font-weight: 600;
-    font-size: .9rem;
     width: 50%;
 }
 
@@ -619,7 +622,6 @@ fieldset {
     border: none;
     border-radius: 10px;
     font-weight: 600;
-    font-size: .85rem;
     width: 45%;
     display: flex;
     justify-content: center;
@@ -668,7 +670,7 @@ fieldset {
     position: absolute;
     bottom: 0;
     left: -10px;
-    min-height: 65%;
+    height: 70%;
     width: 65%;
 }
 
@@ -718,7 +720,7 @@ fieldset {
 }
 
 .dashboard .main .lobby .opportunities h2 {
-    font-size: 1.25rem;
+    font-size: 1rem;
     color: #fff;    
 }
 
@@ -734,10 +736,11 @@ fieldset {
     background-position: right center;
     background-repeat: no-repeat;
     background-color: #1C1C24;
+    height: 50%;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions .explore {
-    width: 45%;
+    width: 48.5%;
     background-color: #1E75FF;
     display: flex;
     justify-content: center;
@@ -745,7 +748,7 @@ fieldset {
     border-radius: 10px;
     margin-top: 20px;
     font-weight: 600;
-    font-size: .8rem;
+    font-size: .65rem;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.reset {
@@ -753,6 +756,10 @@ fieldset {
     background-position: right center;
     background-repeat: no-repeat;
     background-color: #1C1C24;
+    min-height: 46%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .dashboard .main .lobby .opportunities .opportunity .content {
@@ -774,10 +781,10 @@ fieldset {
     border-radius: 10px;
     background-color: #292932;
     padding: 10px 0;
-    width: 45%;
+    width: 48.5%;
     display: flex;
     justify-content: center;
-    font-size: .8rem;
+    font-size: .65rem;
     font-weight: 600;
 }
 
@@ -794,11 +801,21 @@ fieldset {
 }
 
 .dashboard .main .lobby .video .watch {
-    width: 125px;
-    height: 35%;
+    width: 100px;
+    height: 100px;
     background-color: #fff;
     border-radius: 50%;
     position: relative;
+}
+
+.dashboard .main .lobby .video .play {
+    border-color: transparent transparent transparent #202020;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    left: 0;
+    top: 0;
+    /* background-color: #fff; */
 }
 
 .dashboard .main .lobby .dashboard-slider {
@@ -1549,6 +1566,11 @@ fieldset {
     }
     .dashboard .main .lobby .general-info {
         flex-direction: column;
+        height: auto;
+    }
+    .dashboard .main .lobby .video .watch {
+        width: 125px;
+        height: 125px;
     }
     .dashboard .main .lobby .info .buttons button {
         padding: 10px 30px;
@@ -1599,9 +1621,6 @@ fieldset {
         top: 100%;
         width: 250%;
         box-shadow: none;
-    }
-    .dashboard .main .lobby .video .watch {
-        width: 175px;
     }
     .dashboard .main .FAQ .search-bar .search {
         height: 20px;
