--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -900,7 +900,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    height: 300px;
+    height: 350px;
 }
 
 .dashboard .main .lobby .info {
@@ -1104,7 +1104,7 @@ fieldset {
     justify-content: center;
     padding: 10px;
     border-radius: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
     font-weight: 600;
     font-size: .65rem;
 }
@@ -1117,7 +1117,7 @@ fieldset {
     min-height: 46%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .dashboard .main .lobby .opportunities .opportunity .content {
