--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -542,7 +542,7 @@ fieldset {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
-    height: 350px;
+    height: 370px;
 }
 
 .dashboard .main .lobby .info {
@@ -575,9 +575,9 @@ fieldset {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 3px solid #44444F;
+    border: 4px solid #44444F;
     border-radius: 50%;
-    padding: 20px;
+    padding: 25px;
     position: relative;
 }
 
@@ -592,11 +592,21 @@ fieldset {
     justify-content: space-around;
 }
 
+.dashboard .main .lobby .info .user .general .data .user-name {
+    font-size: 16px;
+}
+
+.dashboard .main .lobby .info .user .general .data .user-email {
+    color: #B5B5BE;
+    font-size: 14px;
+    margin-top: 10px;
+}
+
 .dashboard .main .lobby .info .buttons {
     display: flex;
     justify-content: space-between;
     margin-top: 15px;
-    font-size: .7rem;
+    font-size: 12px;
 }
 
 .dashboard .main .lobby .info .buttons button:first-of-type {
@@ -703,11 +713,14 @@ fieldset {
 }
 
 .dashboard .main .lobby .subscriptions .subscription .type {
-    /* transform: rotate(-90deg); */
+    transform: rotate(-90deg);
     position: absolute;
-    top: 0;
+    bottom: 50px;
     right: 0;
+    left: 60px;
     color: #B5B5BE;
+    user-select: none;
+    font-size: .9rem;
 }
 
 .dashboard .main .lobby .opportunities {
@@ -720,13 +733,14 @@ fieldset {
 }
 
 .dashboard .main .lobby .opportunities h2 {
-    font-size: 1rem;
-    color: #fff;    
+    font-size: 16px;
+    color: #FAFAFB;
+    line-height: 24px;
 }
 
 .dashboard .main .lobby .opportunities .opportunity {
     border-radius: 10px;
-    padding: 20px;
+    padding: 25px 20px 30px;
     position: relative;
 }
 
@@ -736,7 +750,7 @@ fieldset {
     background-position: right center;
     background-repeat: no-repeat;
     background-color: #1C1C24;
-    height: 50%;
+    height: 46%;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.questions .explore {
@@ -748,7 +762,7 @@ fieldset {
     border-radius: 10px;
     margin-top: 30px;
     font-weight: 600;
-    font-size: .65rem;
+    font-size: 12px;
 }
 
 .dashboard .main .lobby .opportunities .opportunity.reset {
@@ -763,8 +777,9 @@ fieldset {
 }
 
 .dashboard .main .lobby .opportunities .opportunity .content {
-    font-size: .8rem;
-    color: rgba(255, 255, 255, .7);
+    font-size: 14px;
+    color: #B5B5BE;
+    line-height: 24px;
 }
 
 .dashboard .main .lobby .opportunities .opportunity .links {
@@ -784,7 +799,7 @@ fieldset {
     width: 48.5%;
     display: flex;
     justify-content: center;
-    font-size: .65rem;
+    font-size: 12px;
     font-weight: 600;
 }
 
@@ -823,7 +838,6 @@ fieldset {
 }
 
 .dashboard .main .lobby .popular-products {
-    text-align: center;
     margin-top: 60px;
 }
 
@@ -1583,6 +1597,9 @@ fieldset {
     .dashboard .main .lobby .subscriptions .subscription {
         height: 20vw;
         width: 25%;
+    }
+    .dashboard .main .lobby .subscriptions .subscription .type {
+        bottom: 150px;
     }
     .dashboard .main .lobby .subscriptions .subscription .subscription-character {
         width: 30%;
