--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -63,7 +63,7 @@
     background-repeat: no-repeat;
     padding: 15px;
     border: 1px solid #1E75FF;
-    border-radius: 5px;
+    border-radius: 10px;
     z-index: 1;
 }
 
@@ -1181,6 +1181,7 @@ fieldset {
     background-color: #fff;
     border-radius: 50%;
     position: relative;
+    cursor: pointer;
 }
 
 .dashboard .main .lobby .video .play {
