--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1185,13 +1185,12 @@ fieldset {
 }
 
 .dashboard .main .lobby .video .play {
-    border-color: transparent transparent transparent #202020;
     position: absolute;
-    width: 50px;
-    height: 50px;
-    left: 0;
-    top: 0;
-    /* background-color: #fff; */
+    width: 30px;
+    height: 30px;
+    margin: auto;
+    left: 8px;
+    right: 0;
 }
 
 .dashboard .main .lobby .dashboard-slider {
