--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -1321,6 +1321,10 @@ fieldset {
 
 .dashboard .main .product-info h2 {
     margin-top: 50px;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: .1px;
+    font-weight: 600;
 }
 
 .dashboard .main .product-info .info {
@@ -1335,7 +1339,45 @@ fieldset {
 }
 
 .dashboard .main .product-info .info .general .cost .dropdown {
+    width: 250px;
+    cursor: pointer;
+    position: relative;
+    user-select: none;
+    border: 1px solid #1E75FF;
+    border-radius: 10px;
+    padding: 15px 20px;
+}
+
+.dashboard .main .product-info .info .general .cost .calc-cost .calculated-time {
+    display: flex;
+    justify-content: space-between;
+}
+
+.dashboard .main .product-info .info .general .cost .calc-cost .calculated-time .dropdown-arrow {
+    height: 10px;
+    width: 10px;
+}
+
+.dashboard .main .product-info .info .general .cost .dropdown .items {
+    overflow: hidden;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    user-select: none;
     width: 100%;
+}
+
+.dashboard .main .product-info .info .general .cost .dropdown .items .item {
+    border: 1px solid #1E75FF;
+    border-radius: 10px;
+    padding: 10px 20px;
+}
+
+.dashboard .main .product-info .info .general .cost .gray-line {
+    height: 40px;
+    min-width: 2px;
+    background-color: #292932;
+    margin: 0 30px;
 }
 
 .dashboard .main .product-info .product .cover {
@@ -1356,8 +1398,10 @@ fieldset {
 }
 
 .dashboard .main .product-info .product .title {
-    font-size: 1.5rem;
+    font-size: 24px;
     text-align: center;
+    font-weight: 600;
+    line-height: 36px;
 }
 
 .dashboard .main .product-info .product .main .actions {
@@ -1377,6 +1421,8 @@ fieldset {
     display: flex;
     align-items: center;
     width: 160px;
+    font-weight: 500;
+    font-size: 12px;
 }
 
 .dashboard .main .product-info .product .main .actions .undetect .ellipse {
@@ -1386,26 +1432,45 @@ fieldset {
 
 .dashboard .main .product-info .product .main .actions .last-update {
     margin: 15px auto 0 auto;
+    display: flex;
+    align-items: center;
 }
 
 .dashboard .main .product-info .product .main .actions .last-update .createdDate {
     color: #92929D;
-    font-size: .9rem;
+    line-height: 16px;
+    font-size: 14px;
+}
+
+.dashboard .main .product-info .product .main .actions .last-update .circle {
+    width: 3px;
+    height: 3px;
+    background-color: #D8D8D8;
+    border-radius: 50%;
+    margin: 0 5px;
 }
 
 .dashboard .main .product-info .product .general .description h4 {
-    font-size: 1.2rem;
+    font-size: 16px;
+    color: #FAFAFB;
+    font-weight: 600;
+    line-height: 24px;
 }
 
 .dashboard .main .product-info .product .general p {
-    font-size: .9rem;
-    color: rgba(255, 255, 255, .7);
+    font-size: 14px;
+    line-height: 28px;
+    letter-spacing: .1px;
+    color: #B5B5BE;
     margin-top: 10px;
 }
 
 .dashboard .main .product-info .product .general .characteristics h4 {
-    font-size: 1.2rem;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: .1px;
     margin-top: 100px;
+    font-weight: 600;
 }
 
 .dashboard .main .product-info .product .general .characteristics ul {
@@ -1428,10 +1493,14 @@ fieldset {
 .dashboard .main .product-info .product .general .characteristics ul .characteristic span {
     list-style-image: url(/images/characteristics-product-li.png);
     width: 50%;
+    font-size: 14px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .product .general .characteristics ul .characteristic .value {
-    color:rgba(255, 255, 255, .6);
+    color: #B5B5BE;
+    font-size: 14px;
+
 }
 
 .dashboard .main .product-info .product .general .cost {
@@ -1440,32 +1509,41 @@ fieldset {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-direction: column;
 }
 
 .dashboard .main .product-info .product .general .cost .dropdown .item {
     cursor: pointer;
 }
 
+.dashboard .main .product-info .product .general .cost .calc-cost {
+    display: flex;
+    align-items: center;
+}
+
 .dashboard .main .product-info .product .general .cost .calculated-cost .cost {
     border: none;
     font-weight: 600;
+    font-size: 16px;
+    line-height: 24px;
+    width: 150px;
 }
 
 .dashboard .main .product-info .product .general .cost .button {
-    font-weight: 600;
-    border-radius: 10px;
-    background-color: #1E75FF;
     width: 20%;
-    display: flex;
-    justify-content: center;
+    background-color: #1E75FF;
+    padding: 10px 0;
+    border-radius: 10px;
 }
 
 .dashboard .main .product-info .product .general .cost .button .buy-button {
-    padding: 10px 0;
-    color: #fff;
+    color: #FAFAFB;
     text-decoration: none;
-    font-size: .9rem;
+    font-size: 12px;
+    width: 100%;
+    font-weight: 600;
+    line-height: 18px;
+    display: flex;
+    justify-content: center;
 }
 
 .dashboard .main .product-info .info .magazine {
@@ -1494,10 +1572,15 @@ fieldset {
 
 .dashboard .main .product-info .info .changes .change .general .version {
     color: #50B5FF;
+    font-size: 14px;
+    letter-spacing: .1px;
 }
 
 .dashboard .main .product-info .info .changes .change .general .created {
     color: #B5B5BE;
+    font-size: 14px;
+    line-height: 28px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .dashboard .main .product-info .info .changes .change .description {
@@ -1505,6 +1588,9 @@ fieldset {
     line-height: 35px;
     padding-bottom: 25px;
     border-bottom: 1px solid #292932;
+    font-size: 16px;
+    line-height: 28px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .dashboard .main .product-info .info .changes .change:last-child .description {
@@ -1565,14 +1651,20 @@ fieldset {
 
 .dashboard .main .product-info .popular-products .popular-product h3 {
     margin-top: 20px;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    color: #FAFAFB;
     width: 90%;
 }
 
 .dashboard .main .product-info .popular-products .popular-product .description {
     width: 90%;
-    font-size: .8rem;
+    font-size: 14px;
+    letter-spacing: .1px;
     line-height: 24px;
     color: #B5B5BE;
+    font-family: 'Roboto', sans-serif;
     margin-top: 15px;
 }
 
@@ -1584,7 +1676,7 @@ fieldset {
 }
 
 .dashboard .main .product-info .popular-products .popular-product .buttons a {
-    color: #fff;
+    color: #FAFAFB;
     text-decoration: none;
     background-color: #292932;
     width: 45%;
@@ -1593,7 +1685,7 @@ fieldset {
     border-radius: 10px;
     padding: 10px 0;
     font-weight: 600;
-    font-size: .8rem;
+    font-size: 12px;
 }
 
 .dashboard .main .product-info .popular-products .popular-product .buttons a:first-of-type {
@@ -2114,11 +2206,18 @@ fieldset {
     .dashboard .nav .user-menu .dropdown .item {
         font-size: 16px;
     }
+    /* .cost */
     .dashboard .main .products .product {
         flex-basis: 70%;
     }
     .dashboard .main .products .product .cover {
         height: 50vw;
+    }
+    .dashboard .main .product-info .product .general .cost {
+        flex-direction: column;
+    }
+    .dashboard .main .product-info .product .general .cost .button {
+        margin-top: 15px;
     }
     .dashboard .main .product-info .info .changes .show-all {
         flex-direction: column;
